Edit some icons

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@
   --c-alter-darken: #ded378;
   --c-alter-dark: #c9bf65;
   --c-ligh: white;
-  --c-danger: #f12626;
+  --c-danger: #e33232;
 }
 
 body {
